prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/assign_to_expr.diag.txt
ERROR: can't assign to expression
testData/diagnostics/assign_to_expr.nut:2:0

local x
x-- = 1
^----


